fixed we got you, add gap and adding

--- a/ovning-vecka43/css/globa.css
+++ b/ovning-vecka43/css/globa.css
@@ -27,7 +27,7 @@
     ---color-white: white;
 }
 
-.wrapper {
+.app-container {
     max-width: 1120px;
     margin: 0 auto;
 }
